--- a/Client/src/Styles/Search.css
+++ b/Client/src/Styles/Search.css
@@ -6,6 +6,13 @@
 
 }
 
+.belowFloats
+{
+    clear:both;
+    display:block;
+    margin: auto;
+}
+
 .resultContainer{
     margin: 30px;
     height: 80%;
@@ -14,10 +21,12 @@
     justify-content: center;
 }
 .filterContainer {
-    padding: 30px;
+    padding: 10px;
     border-right: 1px solid gray;
-    width: 20%;
-    margin: 5px
+    width: 25%;
+    margin: 5px;
+    margin-right: 0px;
+    height: max-content;
 }
 .filterTitle{
     font-weight: bold;
@@ -30,6 +39,10 @@
 .contentContain {
     width: 100%;
     margin : 5px ;
+    margin-left: 0px;
+    border-left: 1px solid gray;
+    padding-left: 30px;
+    height: max-content;
   
     background : white;
     background-color: white;
@@ -155,7 +168,10 @@ div{
     border: 1px solid black;
 }
 .resultItemContainer{
-    height: 32%;
+    /* height: 32%; */
+    max-height: 500px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 .noResults{
     height: 100%;
@@ -195,20 +211,23 @@ div{
 }
 .serviceCategories{
     background-color: #55BDCB;
-    max-height: 20%;
+    max-height: 45%;
     min-height: 20%;
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     padding-top:10px;
-    padding-bottom: 10px;
     align-items: center;
     border-bottom-left-radius: 15px;
+    /* overflow-wrap: anywhere; */
+    flex-wrap: wrap;
+    overflow-y: auto;
 }
 .category{
     background-color: #6AEDC6;
-    padding : 3px;
+    padding : 10px;
     border-radius: 15px;
-    margin-left: 5px;
+    margin-left: 10px;
+    margin-bottom: 10px;
     font-size: 12px;
 
 }
@@ -223,15 +242,15 @@ div{
     width: 100%;
     max-height: 50%;
     overflow-y:scroll ;
-    padding-left: 10px;
-    padding-top: 10px;
+    padding: 10px;
+    /* padding-top: 10px; */
 }
 .serviceDetails{
     border-top-right-radius:15px ;
     border-bottom-right-radius:15px ;
     max-width: 30%;
     min-width:30%;
-    height : 100%;
+    /* height : 100%; */
     display: flex;
     padding: 15px;
     flex-direction: column;
@@ -313,3 +332,21 @@ div{
     100% { transform: rotate(360deg); }
   }
 
+ .searchButton{
+    background-color: #6AEDC6;
+    padding: 3px;
+    font-weight: bold;
+}
+
+.searchContainer {
+  display: flex;
+  /* flex-direction: row; */
+  border-radius: 15px;
+  padding : 5px;
+  /* margin-top: 30px; */
+  /* margin-left: 20%; */
+  margin-bottom: 30px;
+  width: 100%;
+  background:#55BDCB;
+  border: 1px solid grey;
+}
